--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,9 @@
         android:layout_gravity="right|center_vertical"
         android:labelFor="@+id/amountEditText"
         android:text="@string/amount"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:layout_row="0"
+        android:layout_column="0" />
 
     <EditText
         android:id="@+id/amountEditText"
@@ -29,10 +31,18 @@
         android:layout_row="0"
         android:digits="0123456789"
         android:inputType="number"
-        android:maxLength="6" >
+        android:maxLength="6" />
 
-        <requestFocus />
-    </EditText>       
+    <EditText
+        android:id="@+id/peopleEditText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_column="1"
+        android:layout_row="1"
+        android:digits="0123456789"
+        android:inputType="number"
+        android:maxLength="6">
+    </EditText>
 
     <TextView
         android:id="@+id/amountDisplayTextView"
@@ -45,12 +55,36 @@
         android:padding="@dimen/textview_padding"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
-    <TextView 
+    <TextView
+        android:id="@+id/numberTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="right|center_vertical"
+        android:labelFor="@+id/amountEditText"
+        android:text="Number in party"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:layout_row="1"
+        android:layout_column="0" />
+
+    <TextView
+        android:id="@+id/peopleNumberTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_column="1"
+        android:layout_gravity="fill_horizontal"
+        android:layout_row="1"
+        android:background="@android:color/holo_blue_bright"
+        android:padding="@dimen/textview_padding"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
+
+    <TextView
         android:id="@+id/customPercentTextView"
         android:layout_width="wrap_content"
         android:layout_gravity="right|center_vertical"
         android:text="@string/custom_tip_percentage"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:layout_row="2"
+        android:layout_column="0" />
 
     <SeekBar
         android:id="@+id/customTipSeekBar"
@@ -58,14 +92,18 @@
         android:layout_height="wrap_content"
         android:layout_gravity="fill_horizontal"
         android:max="30"
-        android:progress="18" />
+        android:progress="18"
+        android:layout_row="2"
+        android:layout_column="1"
+        android:indeterminate="false" />
 
     <LinearLayout
         android:id="@+id/percentLinearLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_column="1"
-        android:layout_gravity="fill_horizontal" >
+        android:layout_gravity="fill_horizontal"
+        android:layout_row="3">
 
         <TextView
             android:id="@+id/percent15TextView"
@@ -91,13 +129,16 @@
         android:id="@+id/tipTextView"
         android:layout_gravity="right|center_vertical"
         android:text="@string/tip"
-        android:textAppearance="?android:attr/textAppearanceMedium"  />
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:layout_row="4"
+        android:layout_column="0" />
 
     <LinearLayout
         android:id="@+id/tipLinearLayout"
         android:layout_height="wrap_content"
         android:layout_column="1"
-        android:layout_gravity="fill_horizontal" >
+        android:layout_gravity="fill_horizontal"
+        android:layout_row="4">
 
         <TextView
             android:id="@+id/tip15TextView"
@@ -128,13 +169,16 @@
         android:id="@+id/totalTextView"
         android:layout_gravity="right|center_vertical"
         android:text="@string/total"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:layout_row="5"
+        android:layout_column="0" />
 
     <LinearLayout
         android:id="@+id/totalLinearLayout"
         android:layout_height="wrap_content"
         android:layout_column="1"
-        android:layout_gravity="fill_horizontal" >
+        android:layout_gravity="fill_horizontal"
+        android:layout_row="5">
 
         <TextView
             android:id="@+id/total15TextView"
@@ -160,6 +204,9 @@
             android:textAppearance="?android:attr/textAppearanceMedium" />
 
     </LinearLayout>
-    <Space />
+
+    <Space
+        android:layout_row="6"
+        android:layout_column="0" />
 
 </GridLayout>
