--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/gridLayout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:columnCount="2"
     android:orientation="horizontal"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -10,7 +10,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:useDefaultMargins="true"
-    tools:context=".MainActivity" >
+    tools:context=".MainActivity" 
+    android:configChanges="locale">
 
     <TextView
         android:id="@+id/amountTextView"
@@ -36,7 +37,7 @@
 
     <TextView
         android:id="@+id/amountDisplayTextView"
-        android:layout_width="wrap_content"
+        android:layout_width="140dp"
         android:layout_height="wrap_content"
         android:layout_column="1"
         android:layout_gravity="fill_horizontal"
@@ -45,6 +46,31 @@
         android:padding="@dimen/textview_padding"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
+    <TextView 
+        android:id="@+id/numberInPartyTextView"
+        android:layout_width="wrap_content"
+        android:layout_gravity="right|center_vertical"
+        android:text="@string/numberInParty"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
+    
+    <EditText
+        android:id="@+id/numberInPartyEditText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_column="1"
+         android:layout_row="1"
+        android:inputType="number"
+        android:maxLength="2"/>
+    
+    <TextView
+        android:id="@+id/numberInPartyDisplayTextView"
+        android:layout_width="40dp"
+        android:layout_height="34dp"
+        android:layout_column="1"
+        android:layout_row="1"
+        android:background="@android:color/holo_blue_bright"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
+            
     <TextView 
         android:id="@+id/customPercentTextView"
         android:layout_width="wrap_content"
@@ -127,7 +153,7 @@
     <TextView
         android:id="@+id/totalTextView"
         android:layout_gravity="right|center_vertical"
-        android:text="@string/total"
+        android:text="@string/totalPerPerson"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <LinearLayout
@@ -160,6 +186,7 @@
             android:textAppearance="?android:attr/textAppearanceMedium" />
 
     </LinearLayout>
-    <Space />
+
+    <Space />
 
 </GridLayout>
