--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,8 +1,8 @@
 <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/gridLayout"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:columnCount="2"
     android:orientation="horizontal"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -18,8 +18,10 @@
         android:layout_height="wrap_content"
         android:layout_gravity="right|center_vertical"
         android:labelFor="@+id/amountEditText"
-        android:text="@string/amount"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
+        android:text="Amount"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:layout_row="0"
+        android:layout_column="0" />
 
     <EditText
         android:id="@+id/amountEditText"
@@ -32,11 +34,11 @@
         android:maxLength="6" >
 
         <requestFocus />
-    </EditText>       
+    </EditText>
 
     <TextView
         android:id="@+id/amountDisplayTextView"
-        android:layout_width="wrap_content"
+        android:layout_width="296dp"
         android:layout_height="wrap_content"
         android:layout_column="1"
         android:layout_gravity="fill_horizontal"
@@ -45,12 +47,14 @@
         android:padding="@dimen/textview_padding"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
-    <TextView 
+    <TextView
         android:id="@+id/customPercentTextView"
         android:layout_width="wrap_content"
         android:layout_gravity="right|center_vertical"
         android:text="@string/custom_tip_percentage"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:layout_row="1"
+        android:layout_column="0" />
 
     <SeekBar
         android:id="@+id/customTipSeekBar"
@@ -58,14 +62,17 @@
         android:layout_height="wrap_content"
         android:layout_gravity="fill_horizontal"
         android:max="30"
-        android:progress="18" />
+        android:progress="18"
+        android:layout_row="1"
+        android:layout_column="1" />
 
     <LinearLayout
         android:id="@+id/percentLinearLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_column="1"
-        android:layout_gravity="fill_horizontal" >
+        android:layout_gravity="fill_horizontal"
+        android:layout_row="2">
 
         <TextView
             android:id="@+id/percent15TextView"
@@ -91,24 +98,27 @@
         android:id="@+id/tipTextView"
         android:layout_gravity="right|center_vertical"
         android:text="@string/tip"
-        android:textAppearance="?android:attr/textAppearanceMedium"  />
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:layout_row="3"
+        android:layout_column="0" />
 
     <LinearLayout
         android:id="@+id/tipLinearLayout"
         android:layout_height="wrap_content"
         android:layout_column="1"
-        android:layout_gravity="fill_horizontal" >
+        android:layout_gravity="fill_horizontal"
+        >
 
         <TextView
             android:id="@+id/tip15TextView"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_gravity="center"
-            android:layout_marginRight="@dimen/textview_margin"
+            android:layout_marginRight="8dp"
             android:layout_weight="1"
             android:background="@android:color/holo_orange_light"
             android:gravity="center"
-            android:padding="@dimen/textview_padding" 
+            android:padding="8dp"
             android:textAppearance="?android:attr/textAppearanceMedium" />
 
         <TextView
@@ -116,10 +126,11 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_gravity="center"
+            android:layout_marginRight="8dp"
             android:layout_weight="1"
             android:background="@android:color/holo_orange_light"
             android:gravity="center"
-            android:padding="@dimen/textview_padding" 
+            android:padding="8dp"
             android:textAppearance="?android:attr/textAppearanceMedium" />
 
     </LinearLayout>
@@ -128,24 +139,27 @@
         android:id="@+id/totalTextView"
         android:layout_gravity="right|center_vertical"
         android:text="@string/total"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:layout_row="4"
+        android:layout_column="0" />
 
     <LinearLayout
         android:id="@+id/totalLinearLayout"
         android:layout_height="wrap_content"
         android:layout_column="1"
-        android:layout_gravity="fill_horizontal" >
+        android:layout_gravity="fill_horizontal"
+        android:layout_row="4">
 
         <TextView
             android:id="@+id/total15TextView"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_gravity="center"
-            android:layout_marginRight="@dimen/textview_margin"
+            android:layout_marginRight="8dp"
             android:layout_weight="1"
             android:background="@android:color/holo_orange_light"
             android:gravity="center"
-            android:padding="@dimen/textview_padding" 
+            android:padding="8dp"
             android:textAppearance="?android:attr/textAppearanceMedium" />
 
         <TextView
@@ -153,13 +167,79 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_gravity="center"
+            android:layout_marginRight="8dp"
             android:layout_weight="1"
             android:background="@android:color/holo_orange_light"
             android:gravity="center"
-            android:padding="@dimen/textview_padding" 
+            android:padding="8dp"
             android:textAppearance="?android:attr/textAppearanceMedium" />
 
     </LinearLayout>
-    <Space />
+
+    <TextView
+        android:id="@+id/peopleTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="right|center_vertical"
+        android:labelFor="@+id/customerDisplayTextView"
+        android:text="@string/coustomer"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:layout_row="5"
+        android:layout_column="0" />
+    <EditText
+        android:id="@+id/customerEditText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_column="1"
+        android:layout_row="5"
+        android:digits="0123456789"
+        android:inputType="number"
+        android:maxLength="6"/>
+
+
+    <TextView
+        android:id="@+id/eachOneTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="right|center_vertical"
+        android:labelFor="@+id/eachOneTextView"
+        android:text="@string/each"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:layout_row="7"
+        android:layout_column="0" />
+
+    <LinearLayout
+        android:id="@+id/totalLinearLayout1"
+        android:layout_height="wrap_content"
+        android:layout_column="1"
+        android:layout_gravity="fill_horizontal"
+        android:layout_row="7">
+
+        <TextView
+            android:id="@+id/average15TextView"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:layout_marginRight="8dp"
+            android:layout_weight="1"
+            android:background="@android:color/holo_orange_light"
+            android:gravity="center"
+            android:padding="8dp"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
+
+        <TextView
+            android:id="@+id/averageCustomTextView"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:layout_marginRight="8dp"
+            android:layout_weight="1"
+            android:background="@android:color/holo_orange_light"
+            android:gravity="center"
+            android:padding="8dp"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
+
+    </LinearLayout>
+
 
 </GridLayout>
