--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,7 +40,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Number in Party"
+        android:text="@string/number"
         android:id="@+id/personTextView"
         android:layout_row="1"
         android:layout_column="0" />
@@ -69,6 +69,13 @@
         android:padding="@dimen/textview_padding"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageView"
+        android:layout_row="2"
+        android:layout_column="0" />
+
     <TextView
         android:id="@+id/numberInPartyTextView"
         android:layout_width="wrap_content"
@@ -86,7 +93,7 @@
         android:layout_gravity="right|center_vertical"
         android:text="@string/custom_tip_percentage"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:layout_row="2"
+        android:layout_row="3"
         android:layout_column="0" />
 
     <SeekBar
@@ -96,7 +103,7 @@
         android:layout_gravity="fill_horizontal"
         android:max="30"
         android:progress="18"
-        android:layout_row="2"
+        android:layout_row="3"
         android:layout_column="1" />
 
     <LinearLayout
@@ -105,7 +112,7 @@
         android:layout_height="wrap_content"
         android:layout_column="1"
         android:layout_gravity="fill_horizontal"
-        android:layout_row="3">
+        android:layout_row="4">
 
         <TextView
             android:id="@+id/percent15TextView"
@@ -132,7 +139,7 @@
         android:layout_gravity="right|center_vertical"
         android:text="@string/tip"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:layout_row="4"
+        android:layout_row="5"
         android:layout_column="0" />
 
     <LinearLayout
@@ -140,7 +147,7 @@
         android:layout_height="wrap_content"
         android:layout_column="1"
         android:layout_gravity="fill_horizontal"
-        android:layout_row="4">
+        android:layout_row="5">
 
         <TextView
             android:id="@+id/tip15TextView"
@@ -172,7 +179,7 @@
         android:layout_gravity="right|center_vertical"
         android:text="@string/total"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:layout_row="5"
+        android:layout_row="6"
         android:layout_column="0" />
 
     <LinearLayout
@@ -180,7 +187,7 @@
         android:layout_height="wrap_content"
         android:layout_column="1"
         android:layout_gravity="fill_horizontal"
-        android:layout_row="5">
+        android:layout_row="6">
 
         <TextView
             android:id="@+id/total15TextView"
@@ -208,7 +215,7 @@
     </LinearLayout>
 
     <Space
-        android:layout_row="6"
+        android:layout_row="7"
         android:layout_column="0" />
 
 </GridLayout>
